Upgrade of asp net debugging app to net 6

--- a/DebuggingTipsAndTrics/DebugWeb/Views/_ViewImports.cshtml
+++ b/DebuggingTipsAndTrics/DebugWeb/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using DebugWeb
-@using DebugWeb.Models
+﻿@using DebugWeb2
+@using DebugWeb2.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
